Fix masonry spacing

--- a/web/themes/custom/wid/scss/components/header.scss
+++ b/web/themes/custom/wid/scss/components/header.scss
@@ -53,7 +53,7 @@
     }
 
     .login-btn {
-        margin-left: 5px;
+        margin-left: 24px;
         font-family: $font-lato;
         color: $primary-color;
         background-color: $white;
